--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 				</div>
 				<div class="col-lg-6 p-5" data-aos="fade-right" data-aos-delay="200">
 				  <div class="testimonial-intro p-5 text-start">
-					<p class="mission-statement">"OUR STORY RUNS IN TANDEM WITH THE UAE’S VISION TO BECOMING THE WORLD’S FOREMOST TRADE, HOSPITALITY AND LIFESTYLE DESTINATION." </p>
-					<p class="founder-business mb-0 mt-5">Aleena</p>
-					<p class="founder-business">Founder of VISHNYA COMMERCIAL BROKAGE LLC</p>
+					<p class="mission-statement upper-case">"We are committed to providing exceptional service, expert guidance, and unparalleled support to ensure your success. Our goal is to provide personalized solutions tailored to your unique needs and objectives." </p>
+					<p class="founder-business mb-0 mt-5">ALINA ISMAIL</p>
+					<p class="founder-business">Founder and CEO of VISHNYA COMMERCIAL BROKERS LLC</p>
 				  </div>
 				  
 				</div>
