--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>MARKET LEADERS IN BUSINESS SALES</title>
+  <title>vISHNYA COMMERCIAL</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -72,7 +72,7 @@
 
 
 				  <div class="main-heading">
-					<h1 class="bottom-line">WELCOME TO VISHNYA</h1>
+					<h1 class="bottom-line">MARKET LEADERS IN BUSINESS SALES</h1>
 				  </div>
 					
 				  <div class="description">
