--- a/index.html
+++ b/index.html
@@ -156,27 +156,27 @@
 	  <div class="title">
 		<div class="heading">
 		  <h1>
-			<a>BUY | </a> <a>SELL | </a> <a>INVEST | </a> <a>Partner | </a> <a> WE FACILITATE</a>
+			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY | </a> <a>SELL | </a> <a>INVEST | </a> <a>Partner | </a> <a>WE FACILITATE</a>
+			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY | </a> <a>SELL | </a> <a>INVEST | </a> <a>Partner | </a> <a>WE FACILITATE</a>	  
+			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>	  
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY | </a> <a>SELL | </a> <a>INVEST | </a> <a>Partner | </a> <a>WE FACILITATE</a> 
+			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY | </a> <a>SELL | </a> <a>INVEST | </a> <a>Partner | </a> <a>WE FACILITATE</a>
+			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY | </a> <a>SELL | </a> <a>INVEST | </a> <a>Partner | </a> <a>WE FACILITATE</a> 
+			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 		</div>
