--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.cdnfonts.com/css/chronicle-display" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -156,29 +156,29 @@
 	  <div class="title">
 		<div class="heading">
 		  <h1>
-			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
 		  </h1>
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
 		  </h1>
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>	  
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
 		  </h1>
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
 		  </h1>
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
 		  </h1>
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>Buy | </a> <a>Sell | </a> <a>Invest | </a> <a>Partner | </a> <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
 		  </h1>
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		</div>
 	  </div>
 	</div>
@@ -193,7 +193,7 @@
 				  </div>
 				</div>
 				<div class="col-lg-6 px-5" data-aos="fade-right" data-aos-delay="200">
-				  <div class="testimonial-intro p-5 mt-lg-5 text-start">
+				  <div class="testimonial-intro p-lg-5 mt-lg-5 text-start">
 					<p class="mission-statement upper-case">"We are committed to providing exceptional service, expert guidance, and unparalleled support to ensure your success. Our goal is to provide personalized solutions tailored to your unique needs and objectives." </p>
 					<br>
 					<p class="founder-business mb-0 mt-5">ALINA ISMAIL</p>
@@ -530,9 +530,9 @@
                 <i class="bi bi-check2-circle"></i>
               </div>
               <div class="step-info">
-                <span class="step-number">Step 04</span>
-                <h3> Fully Supported </h3>
-                <p> Hanovers From final checks to documentation, we ensure a seamless and stress-free handover experience.</p>
+                <span class="step-number">Step 05</span>
+                <h3> Fully Supported Handovers</h3>
+                <p> Handovers From final checks to documentation, we ensure a seamless and stress-free handover experience.</p>
               </div>
             </div>
           </div><!-- End Step Item -->
@@ -792,8 +792,8 @@
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>1 Sheikh Zayed Rd,</p>
-          <p>ONYX Tower 1, office 1301,</p>
-          <p>Dubai, United Arab Emirates </p>
+          <p>The Binary by OMNIYAT, Office P4-12, </p>
+          <p>Business Bay, Dubai, UAE</p>
 		  <p class="mt-4"><strong>Email:</strong> <span>hello@vishnyaproperties.com</span></p>
           <p class="mt-4"><strong>Phone:</strong> <span>+971 (4) 452 2765‬</span></p>
 		  <p><strong>Phone:</strong> <span>+971 (52) 447 2390‬</span></p>
