--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
 
 				  <div class="main-heading">
-					<h1 class="bottom-line">MARKET LEADERS IN BUSINESS SALES</h1>
+					<h1 class="bottom-line">MARKET LEADER IN BUSINESS SALES</h1>
 				  </div>
 					
 				  <div class="description">
-					<p>	Welcome to VISHNYA Commercial Brokers L.L.C  </p>
-					<p>	Your Trusted Partner in business brokerage & Market Leaders in Business Sales
-					</p>
+					<!-- <p>	Welcome to VISHNYA Commercial Brokers L.L.C  </p> -->
+					<!-- <p>	Your Trusted Partner in business brokerage & Market Leaders in Business Sales -->
+					<!-- </p> -->
 				  </div>
 
 				  <!-- <div class="cta-button"> -->
@@ -193,8 +193,11 @@
 				  </div>
 				</div>
 				<div class="col-lg-6 px-5" data-aos="fade-right" data-aos-delay="200">
-				  <div class="testimonial-intro p-lg-5 mt-lg-5 text-start">
-					<p class="mission-statement upper-case">"We are committed to providing exceptional service, expert guidance, and unparalleled support to ensure your success. Our goal is to provide personalized solutions tailored to your unique needs and objectives." </p>
+				  <div class="testimonial-intro p-lg-5 text-start">
+					<p class="mission-statement upper-case mt-2">"Dear valued clients and partners, On behalf of our entire team, I am thrilled to welcome you here. We are excited to have you on board and look forward to working closely to achieve your business goals.
+					Our team of experienced professionals is committed to provide exceptional service, expert guidance, and unparalleled support to ensure your success. 
+					We believe in building long-term relationships based on trust, integrity, and transparency. Our vision is to provide personalized solutions tailored to your unique needs and objectives.
+					Thank you for choosing VISHNYA. We are honored to have the opportunity for a successful partnership.  " </p>
 					<br>
 					<p class="founder-business mb-0 mt-5">ALINA ISMAIL</p>
 					<p class="founder-business">Founder and CEO of VISHNYA COMMERCIAL BROKERS LLC</p>
@@ -252,7 +255,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                  Business <span>Buying & Selling</span>
+                   <span>Business Buying & Selling</span>
                 </a>
               </h3>
               <p>
@@ -270,7 +273,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                  Investment <span>Advisory</span>
+                   <span>Investment Advisory</span>
                 </a>
               </h3>
               <p>
@@ -306,7 +309,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                  Franchise <span>Projects</span>
+                   <span>Franchise Projects</span>
                 </a>
               </h3>
               <p>
@@ -324,7 +327,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                  Legal & Financial <span>Solutions</span>
+                   <span>Legal & Financial Solutions</span>
                 </a>
               </h3>
               <p>
@@ -340,7 +343,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                  Wealth <span>Management</span>
+                   <span>Wealth Management</span>
                 </a>
               </h3>
               <p>Our expert advisors provide personalized strategies to help you achieve long-term financial security and success.SOur expert advisors provide personalized strategies to help you achieve long-term financial security and success.              </p>
@@ -356,7 +359,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                  Marketing <span>Solutions & IT</span>
+                   <span>Marketing Solutions & IT</span>
                 </a>
               </h3>
               <p>
@@ -374,7 +377,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                 Real Estate Solutions	  <span>for your business</span>
+                   <span>Real Estate Guide for Business</span>
                 </a>
               </h3>
               <p>
@@ -393,7 +396,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                  Business Plan <span>Advisory</span>
+                   <span>Business Plan Advisory</span>
                 </a>
               </h3>
               <p>
@@ -445,7 +448,7 @@
               </a>
               <h3>
                 <a href="#contact">
-                  Business License <span>Consultancy</span>
+                  <span> Business License Consultancy</span>
                 </a>
               </h3>
               <p>
@@ -611,6 +614,7 @@
 			</div>
 			<div class="pb-5"> 
 				<p> Join a dynamic team where innovation, growth, and collaboration drive everything we do. Whether you're starting your journey or looking to take the next step, we offer a supportive environment to build a fulfilling career.   </p> 
+				<p> Email us at	 hello@vishnyacommercial.com </p>
 			</div>
 			<div class="text-center"> 
 				<a href="#contact" class="btn btn-primary mt-4">Get in touch</a>
@@ -655,7 +659,7 @@
               </div>
               <div class="info-content">
                 <h4>Email Address</h4>
-                <p>hello@vishnyaproperties.com</p>
+                <p>hello@vishnyacommercial.com</p>
               </div>
             </div>
           </div>
@@ -794,7 +798,7 @@
           <p>1 Sheikh Zayed Rd,</p>
           <p>The Binary by OMNIYAT, Office P4-12, </p>
           <p>Business Bay, Dubai, UAE</p>
-		  <p class="mt-4"><strong>Email:</strong> <span>hello@vishnyaproperties.com</span></p>
+		  <p class="mt-4"><strong>Email:</strong> <span>hello@vishnyacommercial.com</span></p>
           <p class="mt-4"><strong>Phone:</strong> <span>+971 (4) 452 2765‬</span></p>
 		  <p><strong>Phone:</strong> <span>+971 (52) 447 2390‬</span></p>
          
