--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="col-lg-6 mt-4 mt-lg-0" data-aos="fade-left" data-aos-delay="300">
             <div class="about-content">
               <h2>ELEVATE   |  GROW  |  THRIVE</h2>
-              <p>At VISHNYA Commercial Brokers LLC, we specialize in connecting investors, entrepreneurs, and business owners for premium investment opportunities in the UAE.</p>
+              <p>Welcome to VISHNYA Commercial Brokers L.L.C. Your Trusted Partner in business brokerage. We specialize in connecting investors, entrepreneurs, and business owners for premium investment opportunities in the UAE.</p>
 			  <p class="lead">With a deep understanding of the commercial market, we offer expert brokerage services to facilitate seamless business acquisitions, mergers, and sales.</p>
 
               <div class="row g-3 mt-3">
@@ -156,27 +156,27 @@
 	  <div class="title">
 		<div class="heading">
 		  <h1>
-			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE &nbsp;&nbsp;&nbsp; FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE &nbsp;&nbsp;&nbsp; FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE &nbsp;&nbsp;&nbsp; FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE &nbsp;&nbsp;&nbsp; FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE &nbsp;&nbsp;&nbsp; FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		  <h1>
-			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE FACILITATE</a>
+			<a>BUY   </a> &nbsp;&nbsp;&nbsp; <a>SELL   </a> &nbsp;&nbsp;&nbsp; <a>INVEST   </a> &nbsp;&nbsp;&nbsp; <a>PARTNER   </a> &nbsp;&nbsp;&nbsp; <a> WE &nbsp;&nbsp;&nbsp; FACILITATE</a>
 		  </h1>
 		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		</div>
@@ -193,7 +193,7 @@
 				  </div>
 				</div>
 				<div class="col-lg-6 px-5" data-aos="fade-right" data-aos-delay="200">
-				  <div class="testimonial-intro p-lg-5 text-start">
+				  <div class="testimonial-intro p-lg-5 text-justify">
 					<p class="mission-statement upper-case mt-2">"Dear valued clients and partners, On behalf of our entire team, I am thrilled to welcome you here. We are excited to have you on board and look forward to working closely to achieve your business goals.
 					Our team of experienced professionals is committed to provide exceptional service, expert guidance, and unparalleled support to ensure your success. 
 					We believe in building long-term relationships based on trust, integrity, and transparency. Our vision is to provide personalized solutions tailored to your unique needs and objectives.
@@ -565,23 +565,33 @@
             <div class="features d-flex flex-wrap gap-3 mb-4">
               <div class="feature-item">
                 <i class="bi bi-check-circle-fill"></i>
-                <span>Expert Market Knowledge </span>
+                <span>Private Consultations </span>
               </div>
-              <div class="feature-item">
+			  <div class="feature-item">
                 <i class="bi bi-check-circle-fill"></i>
-                <span>Confidential & Professional Service</span>
+                <span>⁠Expert Market Knowledge </span>
               </div>
-              <div class="feature-item">
+			  <div class="feature-item">
+                <i class="bi bi-check-circle-fill"></i>
+                <span> Discreet Services</span>
+              </div>
+			  <div class="feature-item">
+                <i class="bi bi-check-circle-fill"></i>
+                <span>Secure Transactions</span>
+              </div>
+
+			  <div class="feature-item">
+                <i class="bi bi-check-circle-fill"></i>
+                <span>Customized Strategies</span>
+              </div>
+			  <div class="feature-item">
                 <i class="bi bi-check-circle-fill"></i>
                 <span> Extensive Network</span>
               </div>
+
 			  <div class="feature-item">
                 <i class="bi bi-check-circle-fill"></i>
-                <span> Customized Strategies</span>
-              </div>
-			  <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
-                <span>Trust Third-Party Vendors & Suppliers</span>
+                <span> Trusted Third Party Vendors and Suppliers</span>
               </div>
 
             </div>
@@ -610,14 +620,21 @@
 	<section id="careers" class="contact section py-5">
 		<div class="container" data-aos="fade-up">
 			 <div class="section-title pb-5" data-aos="fade-up">
-				<div> <span class="description-title">WORK WITH US</span></div>
+				<div> <span class="description-title">Join Our Dynamic Team!</span></div>
 			</div>
 			<div class="pb-5"> 
-				<p> Join a dynamic team where innovation, growth, and collaboration drive everything we do. Whether you're starting your journey or looking to take the next step, we offer a supportive environment to build a fulfilling career.   </p> 
-				<p> Email us at	 hello@vishnyacommercial.com </p>
+				<p> Are you passionate about learning or already have experience in commercial brokerage? We're looking for talented individuals to join our innovative team!</p> 
+				<p> At VISHNYA COMMERCIAL BROKERS LLC, you'll find: </p>
+				<ul>
+					<li>A culture of innovation and growth</li>
+					<li>Collaborative and dynamic work environment</li>
+					<li>Opportunities for professional development and advancement</li>
+				</ul>
+				<p> If you're driven, motivated, and eager to succeed, we want to hear from you!</p>
+				<p>Apply now to become part of our exceptional team!</p>
 			</div>
 			<div class="text-center"> 
-				<a href="#contact" class="btn btn-primary mt-4">Get in touch</a>
+				<a href="mailto: hr@vishnyacommercial.com" class="btn btn-primary mt-4">SEND CV</a>
 			</div>
 	  </div>
 
