--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0" data-aos="fade-left" data-aos-delay="300">
             <div class="about-content">
-              <h2>ELEVATE   |  GROW  |  THRIVE</h2>
+              <h4>ELEVATE   |  GROW  |  THRIVE</h4>
               <p>Welcome to VISHNYA Commercial Brokers L.L.C. Your Trusted Partner in business brokerage. We specialize in connecting investors, entrepreneurs, and business owners for premium investment opportunities in the UAE.</p>
-			  <p class="lead">With a deep understanding of the commercial market, we offer expert brokerage services to facilitate seamless business acquisitions, mergers, and sales.</p>
+			  <p class="lead1">With a deep understanding of the commercial market, we offer expert brokerage services to facilitate seamless business acquisitions, mergers, and sales.</p>
 
               <div class="row g-3 mt-3">
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="400">
                   <div class="feature-item">
                     <i class="bi bi-check-circle-fill"></i>
                     <h5>Dedicated Team Support</h5>
-                    <p>Our team ensures a smooth and transparent process tailored to your goals.</p>
+                    <p>Our team ensures a smooth and transparent process.</p>
                   </div>
                 </div>
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="450">
@@ -194,13 +194,15 @@
 				</div>
 				<div class="col-lg-6 px-5" data-aos="fade-right" data-aos-delay="200">
 				  <div class="testimonial-intro p-lg-5 text-justify">
-					<p class="mission-statement upper-case mt-2">"Dear valued clients and partners, On behalf of our entire team, I am thrilled to welcome you here. We are excited to have you on board and look forward to working closely to achieve your business goals.
-					Our team of experienced professionals is committed to provide exceptional service, expert guidance, and unparalleled support to ensure your success. 
-					We believe in building long-term relationships based on trust, integrity, and transparency. Our vision is to provide personalized solutions tailored to your unique needs and objectives.
-					Thank you for choosing VISHNYA. We are honored to have the opportunity for a successful partnership.  " </p>
-					<br>
+					<p class="mission-statement upper-case mt-2">"Dear valued clients and partners, on behalf of our entire team, I am thrilled to welcome you here. We are excited to have you on board. We are looking forward to work closely with you to achieve your business goals.</p>
+					
+					<p>Our team of experienced professionals is committed to provide exceptional service, expert guidance, and unparalleled support to ensure your success. 
+						We believe in building long-term relationships based on trust, integrity, and transparency. Our vision is to provide personalized solutions tailored to your unique needs and objectives.</p>
+					<p>Thank you for choosing VISHNYA. We are honored to have the opportunity for a successful partnership." </p>
 					<p class="founder-business mb-0 mt-5">ALINA ISMAIL</p>
-					<p class="founder-business">Founder and CEO of VISHNYA COMMERCIAL BROKERS LLC</p>
+					</br>
+					<p class="founder-business mb-0">Founder & CEO </p>
+					<p>VISHNYA COMMERCIAL BROKERS L.L.C</p>
 				  </div>
 				  
 				</div>
