--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
 					<p>Our team of experienced professionals is committed to provide exceptional service, expert guidance, and unparalleled support to ensure your success. 
 						We believe in building long-term relationships based on trust, integrity, and transparency. Our vision is to provide personalized solutions tailored to your unique needs and objectives.</p>
 					<p>Thank you for choosing VISHNYA. We are honored to have the opportunity for a successful partnership." </p>
-					<p class="founder-business mb-0 mt-5">ALINA ISMAIL</p>
 					</br>
+					<p class="founder-business mb-0 mt-5">ALINA ISMAIL</p>
+					
 					<p class="founder-business mb-0">Founder & CEO </p>
 					<p>VISHNYA COMMERCIAL BROKERS L.L.C</p>
 				  </div>
@@ -261,7 +262,7 @@
                 </a>
               </h3>
               <p>
-				Our team of experienced brokers ensures a seamless and confidential process, connecting you with the right buyers and sellers to maximize your business's value.
+				We ensure a seamless and confidential process to maximize your business value, we connect you with the right buyers.
               </p>
             </div>
           </div>
@@ -279,7 +280,7 @@
                 </a>
               </h3>
               <p>
-				Whether you're looking for an established business, a profitable franchise, or an exclusive investment project, we provide expert guidance to help you make the right decision.
+				We guide you to make the right decision, when you are looking for an established business, or profitable franchises or exclusive investment project. 
               </p>
             </div>
           </div>
@@ -315,7 +316,7 @@
                 </a>
               </h3>
               <p>
-                 Looking to invest in a well-known brand with a successful business model? Our franchise listings provide you with access to profitable and reputable franchises in the UAE.
+                 Looking to invest in a well-known brand with a successful business model? We provide access to well known brands. 
               </p>
             </div>
           </div>
@@ -348,7 +349,7 @@
                    <span>Wealth Management</span>
                 </a>
               </h3>
-              <p>Our expert advisors provide personalized strategies to help you achieve long-term financial security and success.SOur expert advisors provide personalized strategies to help you achieve long-term financial security and success.              </p>
+              <p>We provide personalised strategies to help you achieve long-term financial security and success.SOur expert advisors provide personalized strategies to help you achieve long-term financial security and success.              </p>
             </div>
           </div>
 		  		  <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
@@ -454,7 +455,7 @@
                 </a>
               </h3>
               <p>
-				Each industry has its own unique regulations and licensing requirements. We simplify the process by working closely with trusted third-party licensing partners to ensure your business is fully compliant and set up for success              </p>
+				Each industry has its own unique regulations and licensing requirements. We simplify the process by working closely with trusted third-party licensing partners to ensure your business is fully compliant and set up for success.              </p>
             </div>
           </div>
         </div>
@@ -484,7 +485,7 @@
                 <span class="step-number">Step 01</span>
 
                 <h3> Expert Consultation</h3>
-                <p> Receive strategic, industry-specific guidance to make informed business decisions from the start.</p>
+                <p> Strategic industry-specific guidance to make informed business decisions from the start.</p>
               </div>
             </div>
           </div><!-- End Step Item -->
@@ -496,8 +497,8 @@
               </div>
               <div class="step-info">
                 <span class="step-number">Step 02</span>
-                <h3> Execution an Exchange</h3>
-                <p> We manage documentation and coordinate with relevant parties to ensure a smooth transaction process.</p>
+                <h3> Execution and Exchange</h3>
+                <p> We manage documentation and coordinate with relevant parties to ensure secure, safe, and confidential document signing.</p>
 
               </div>
             </div>
@@ -511,7 +512,7 @@
               <div class="step-info">
                 <span class="step-number">Step 03</span>
                 <h3> Viewing Process</h3>
-                <p> Schedule and attend property or site viewings with full transparency and professional assistance.</p>
+                <p> Available only after signed NDA with company and client.</p>
               </div>
             </div>
           </div><!-- End Step Item -->
@@ -524,7 +525,7 @@
               <div class="step-info">
                 <span class="step-number">Step 04</span>
                 <h3> Tailored Contract Solutions</h3>
-                <p> We draft and review contracts customized to your business needs, ensuring legal clarity and protection.</p>
+                <p> Our legal team manage documentation and coordinate with relevant parties.</p>
               </div>
             </div>
           </div><!-- End Step Item -->
@@ -536,7 +537,7 @@
               </div>
               <div class="step-info">
                 <span class="step-number">Step 05</span>
-                <h3> Fully Supported Handovers</h3>
+                <h3> Post Handover Support</h3>
                 <p> Handovers From final checks to documentation, we ensure a seamless and stress-free handover experience.</p>
               </div>
             </div>
@@ -566,34 +567,36 @@
 
             <div class="features d-flex flex-wrap gap-3 mb-4">
               <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
+                <i class="bi bi-person-lines-fill"></i>
                 <span>Private Consultations </span>
               </div>
+
 			  <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
-                <span>⁠Expert Market Knowledge </span>
-              </div>
-			  <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
+                <i class="bi bi-journal-check"></i>
                 <span> Discreet Services</span>
               </div>
 			  <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
+                <i class="bi bi-lock-fill"></i>
                 <span>Secure Transactions</span>
               </div>
 
 			  <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
+                <i class="bi bi-ui-checks"></i>
                 <span>Customized Strategies</span>
               </div>
 			  <div class="feature-item">
-                <i class="bi bi-check-circle-fill"></i>
+                <i class="bi bi-server"></i>
                 <span> Extensive Network</span>
               </div>
 
 			  <div class="feature-item">
                 <i class="bi bi-check-circle-fill"></i>
-                <span> Trusted Third Party Vendors and Suppliers</span>
+                <span> Trusted Vendors & Suppliers </span>
+              </div>
+			  
+			  <div class="feature-item">
+                <i class="bi bi-clipboard2-data-fill"></i>
+                <span>⁠Sector-Specific Regulatory Guidance </span>
               </div>
 
             </div>
@@ -625,11 +628,11 @@
 				<div> <span class="description-title">Join Our Dynamic Team!</span></div>
 			</div>
 			<div class="pb-5"> 
-				<p> Are you passionate about learning or already have experience in commercial brokerage? We're looking for talented individuals to join our innovative team!</p> 
+				<p> We’re looking for talented individuals to join our passionate team!</p> 
 				<p> At VISHNYA COMMERCIAL BROKERS LLC, you'll find: </p>
 				<ul>
 					<li>A culture of innovation and growth</li>
-					<li>Collaborative and dynamic work environment</li>
+					<li>Active Work Environment </li>
 					<li>Opportunities for professional development and advancement</li>
 				</ul>
 				<p> If you're driven, motivated, and eager to succeed, we want to hear from you!</p>
@@ -652,7 +655,8 @@
 			<div> <span class="description-title">Ready to Sell Your Business?</span></div>
 		</div>
 		<div class="pb-5"> 
-			<p> Let VISHNYA Commercial Brokers LLC help you navigate the business selling process with confidence. Contact us today for a confidential consultation and take the first step toward a successful sale.  </p> 
+			<p> We help you navigate towards a successful business selling process. 
+				Contact us today for a confidential consultation and take the first step towards a successful sale.  </p> 
 		</div>
 	  </div><!-- End Section Title -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -839,8 +843,11 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
+	<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+		
+	<a href="https://wa.me/971524472390?text=WELCOME%20TO%20VISHNYA%20COMMERCIAL%20LLC%21%20HOW%20CAN%20WE%20ASSIST%20YOU&quest;" class="whats-app" target="_blank">
+	<i class="bi bi-whatsapp my-float"></i>
+	</a>
   <!-- Preloader -->
   <div id="preloader"></div>
 
