--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					</a>
 					<a href="mailto: hr@vishnyacommercial.com" class="mt-5 phone-btn">
 						<i class="bi bi-envelope phone-icon"></i>
-						<span class="phone-no">hr@vishnyacommercial.com‬</span>
+						<span class="phone-no">hello@vishnyacommercial.com‬</span>
 					 
 					</a>
 				  </div>
@@ -328,7 +328,7 @@
                 </a>
               </h3>
               <p>
-                 Looking to invest in a well-known brand with a successful business model? We provide access to well known brands. 
+                We provide access to well known brands. 
               </p>
             </div>
           </div>
