--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 	
-      <a class="btn-getstarted" href="#contact">Get Started</a>
+      <a class="btn-getstarted" href="#form">Get Started</a>
 
     </div>
   </header>
@@ -97,7 +97,7 @@
 					</a>
 					<a href="mailto: hr@vishnyacommercial.com" class="mt-5 phone-btn">
 						<i class="bi bi-envelope phone-icon"></i>
-						<span class="phone-no">hello@vishnyacommercial.com‬</span>
+						<span class="phone-no">hr@vishnyacommercial.com‬</span>
 					 
 					</a>
 				  </div>
@@ -328,7 +328,7 @@
                 </a>
               </h3>
               <p>
-                We provide access to well known brands. 
+                 Looking to invest in a well-known brand with a successful business model? We provide access to well known brands. 
               </p>
             </div>
           </div>
@@ -646,7 +646,7 @@
 			<div class="row d-flex pb-5"> 
 				<div class="col-lg-6 col-md-6 col-sm-12"> 
 					<p> We’re looking for talented individuals to join our passionate team!</p> 
-					<p> At VISHNYA COMMERCIAL BROKERS LLC, you'll find: </p>
+					<p> At Vishnya Commercial Brokers LLC, you'll find: </p>
 					<ul>
 						<li>A culture of innovation and growth</li>
 						<li>Active Work Environment </li>
@@ -667,7 +667,7 @@
 	</section>
 	
     <!-- Contact Section -->
-    <section id="contact" class="contact section py-5">
+    <section id="contact" class="contact section">
 	
       <!-- Section Title -->
       <div class="container " data-aos="fade-up">
@@ -726,7 +726,7 @@
 
 
 		  <!-- Contact Form Section (Overlapping) -->
-      <div class="container form-container-overlap">
+      <div id="form" class="container form-container-overlap">
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="300">
           <div class="col-lg-10">
             <div class="contact-form-wrapper">
