--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					</a>
 					<a href="mailto: hr@vishnyacommercial.com" class="mt-5 phone-btn">
 						<i class="bi bi-envelope phone-icon"></i>
-						<span class="phone-no">hr@vishnyacommercial.com‬</span>
+						<span class="phone-no">hello@vishnyacommercial.com‬</span>
 					 
 					</a>
 				  </div>
@@ -328,7 +328,7 @@
                 </a>
               </h3>
               <p>
-                 Looking to invest in a well-known brand with a successful business model? We provide access to well known brands. 
+                 We provide access to well known brands. 
               </p>
             </div>
           </div>
@@ -646,7 +646,7 @@
 			<div class="row d-flex pb-5"> 
 				<div class="col-lg-6 col-md-6 col-sm-12"> 
 					<p> We’re looking for talented individuals to join our passionate team!</p> 
-					<p> At Vishnya Commercial Brokers LLC, you'll find: </p>
+					<p> At VISHNYA Commercial Brokers LLC, you'll find: </p>
 					<ul>
 						<li>A culture of innovation and growth</li>
 						<li>Active Work Environment </li>
@@ -805,10 +805,10 @@
             <img width="200px" height="200px" src="assets/img/logo-trans.png" alt="">
           </a>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.threads.com/@vishnya.commercial/"><i class="bi bi-threads"></i></a>
+            <a href="https://www.facebook.com/share/1BTc5WfV22/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/vishnya.commercial/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/107315152/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
