--- a/index.html
+++ b/index.html
@@ -656,11 +656,11 @@
 					<p>Apply now to become part of our exceptional team!</p>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12"> 
-					 <img class="img-fluid" src="assets/img/join-us.JPG" alt="">
+					 <img class="img-fluid rounded-4" src="assets/img/join-us.JPG" alt="">
 				</div>
 			</div>
 			<div class="text-center"> 
-				<a href="mailto: hr@vishnyacommercial.com" class="btn btn-primary mt-4">SEND CV</a>
+				<a href="mailto: hello@vishnyacommercial.com" class="btn btn-primary mt-4">SEND CV</a>
 			</div>
 	  </div>
 
