--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 
     </section><!-- /Call To Action Section -->
 	
-	<section id="careers" class="contact section py-5">
+	<section id="careers" class="contact section p-5">
 		<div class="container" data-aos="fade-up">
 			 <div class="section-title pb-5" data-aos="fade-up">
 				<div> <span class="description-title">Join Our Dynamic Team!</span></div>
@@ -655,7 +655,7 @@
 					<p> If you're driven, motivated, and eager to succeed, we want to hear from you!</p>
 					<p>Apply now to become part of our exceptional team!</p>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12 p-5"> 
+				<div class="col-lg-6 col-md-6 col-sm-12"> 
 					 <img class="img-fluid rounded-4" src="assets/img/join-us.JPG" alt="">
 				</div>
 			</div>
