--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 				  <div class="section-title">
 				  <div><span class="description-title">CEO GREETING MESSAGE</span></div>
 					
-				  </div>
-				</div>
+				 </div>
+			</div>
 				<div class="col-lg-6 px-5" data-aos="fade-right" data-aos-delay="200">
 				  <div class="testimonial-intro p-lg-5 text-justify">
 					<p class="mission-statement upper-case mt-2">"Dear valued clients and partners, on behalf of our entire team, I am thrilled to welcome you here. We are excited to have you on board. We are looking forward to work closely with you to achieve your business goals.</p>
@@ -223,9 +223,10 @@
             <div class="col-lg-6 p-5 d-flex" data-aos="fade-left" data-aos-delay="300">
 				<img src="assets/img/founder.jpg" class="img-fluid rounded-4 shadow-sm" alt="About Image" loading="lazy">               
 			</div>
-      </div>
-
-    </section><!-- /About Section -->
+		</div>
+	</div>
+			  
+</section> <!-- /About Section -->
 
     <!-- Services Section -->
     <section id="services" class="services section">
@@ -638,8 +639,8 @@
 
     </section><!-- /Call To Action Section -->
 	
-	<section id="careers" class="contact section p-5">
-		<div class="container" data-aos="fade-up">
+	<section id="careers" class="contact section py-5">
+		<div class="" data-aos="fade-up">
 			 <div class="section-title pb-5" data-aos="fade-up">
 				<div> <span class="description-title">Join Our Dynamic Team!</span></div>
 			</div>
@@ -655,7 +656,7 @@
 					<p> If you're driven, motivated, and eager to succeed, we want to hear from you!</p>
 					<p>Apply now to become part of our exceptional team!</p>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12"> 
+				<div class="col-lg-6 col-md-6 col-sm-12 p-5"> 
 					 <img class="img-fluid rounded-4" src="assets/img/join-us.JPG" alt="">
 				</div>
 			</div>
