--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 					<p> If you're driven, motivated, and eager to succeed, we want to hear from you!</p>
 					<p>Apply now to become part of our exceptional team!</p>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12"> 
+				<div class="content-right col-lg-6 col-md-6 col-sm-12"> 
 					 <img class="img-fluid rounded-4" src="assets/img/join-us.JPG" alt="">
 				</div>
 			</div>
