--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="#">Listings</a></li>
           <li><a href="#">Partners</a></li>
           <li><a href="#careers">Careers</a></li>
-		   <li><a href="#contact">Contact Us</a></li>
+		   <li><a href="#form">Contact Us</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
